--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ function geocodeAddress(geocoder, resultsMap) {
 }
 
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&signed_in=true&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAS90o3er2K4c7a-lk8_tHjTBm67R3GGLQ &signed_in=true&callback=initMap"
         async defer></script>
   </body>
 </html>
