--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
   </head>
   <body>
     <div id="floating-panel">
-      <input id="address" type="textbox" value="Sydney, NSW">
+      <input id="address" type="textbox" value="Mantri Tower,Dahisar">
       <input id="submit" type="button" value="Geocode">
     </div>
     <div id="map"></div>
     <script>
 function initMap() {
   var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 8, 
+    zoom: 20, 
     center: {lat: 19.254929, lng: 72.858129}
   });
   var geocoder = new google.maps.Geocoder();
