--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
 
+
+<body ng-app="locatorDemo" ng-controller="MainCtrl">
+  <nav>
+      <h1>
+        Locator <small>a set of google location services for AngularJS</small>
+      </h1><!--
+       --><a href="https://github.com/winkerVSbecks/locator">github</a>
+    </nav>
+
+    <small class="tag-line">A set of google location services for AngularJS
+    </small>
+
+    <div class="column black flex-item">
+      <h2>Location Lookup <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/149125/powered-by-google-on-non-white@2x.png" width="104px"></h2>
+      <location-lookup ng-model="lookedUpLocation" limit-to="4"></location-lookup>
+    </div>
+
+    <div class="column blue flex-item">
+      <h2>Location Picker <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/149125/powered-by-google-on-non-white@2x.png" width="104px"></h2>
+      <location-picker ng-model="pickedLocation" limit-to="5"></location-picker>
+    </div>
+
+    <div ng-class="{ false: 'modal', true: 'modal--show' }[isModalVisible]">
+      <div class="overlay" ng-click="toggleModal()"></div>
+      <div class="modal__contents modal--transition">
+        <a class="modal__close" href="" ng-click="toggleModal()">&times;</a>
+        <h3 ng-if="pickedLocation">Picked Location</h3>
+        <p ng-if="pickedLocation">Name: <span class="muted">{{pickedLocation.name}}</span><br/>Description: <span class="muted">{{pickedLocation.description}}</span><br/>Latitude: <span class="muted">{{pickedLocation.latitude}}</span><br/>Longitude: <span class="muted">{{pickedLocation.longitude}}</span></p>
+        <br/>
+        <br/>
+        <h3 ng-if="lookedUpLocation">Looked Up Location</h3>
+        <p ng-if="lookedUpLocation">Name: <span class="muted">{{lookedUpLocation.name}}</span><br/>Description: <span class="muted">{{lookedUpLocation.description}}</span><br/>Latitude: <span class="muted">{{lookedUpLocation.latitude}}</span><br/>Longitude: <span class="muted">{{lookedUpLocation.longitude}}</span></p>
+      </div>
+    </div>
+</body>
+
+
